--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,45 +10,39 @@
     tools:context=".MainActivity"
     android:paddingBottom="1dp">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="czas:"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:padding="1dp"/>
-
-    <EditText
-        android:id="@+id/editTime"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:hint="time"
-        android:inputType="text"
-        android:textSize="15sp">
-
-    </EditText>
-
-
-</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="czas:"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:padding="1dp"/>
+
+        <EditText
+            android:id="@+id/editTime"
+            android:layout_width="70dp"
+            android:layout_height="48dp"
+            android:hint="time"
+            android:inputType="text"
+            android:textSize="15sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="dystans:"
             android:textSize="15sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/editdystans"
@@ -56,17 +50,13 @@
             android:layout_height="48dp"
             android:hint="dystans"
             android:inputType="text"
-            android:textSize="15sp">
-
-        </EditText>
-
-
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -79,60 +69,96 @@
             android:id="@+id/editkalorie"
             android:layout_width="70dp"
             android:layout_height="48dp"
-            android:hint="dystans"
+            android:hint="kalorie"
             android:inputType="text"
-            android:textSize="15sp">
-
-        </EditText>
-
-
+            android:textSize="15sp"/>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <RadioGroup
+            android:id="@+id/rodzaj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <RadioButton
-                android:id="@+id/spacer"
+                android:id="@+id/spacer_radiobatton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="spacer"/>
+
             <RadioButton
-                android:id="@+id/bieg"
+                android:id="@+id/bieg_radiobatton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="bieg"/>
+
             <RadioButton
-                android:id="@+id/swim"
+                android:id="@+id/swim_radiobatton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="płyłanie"/>
+                android:text="pływanie"/>
         </RadioGroup>
     </LinearLayout>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/intensityLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="intensywność"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:padding="10dp" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"
-        android:layout_margin="10dp"/>
+        android:background="@android:color/black"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
 
-    <SeekBar
-        android:id="@+id/seekbar"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="50"
-        android:progressTint="#E91E63"
-        android:progressBackgroundTint="#0DC939"
-        android:thumbTint="#123abc"/>
-</LinearLayout>
+        android:orientation="vertical">
+
+        <SeekBar
+            android:id="@+id/seekbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:progress="0"
+            android:progressBackgroundTint="#0DC939"
+            android:progressTint="#E91E63"
+            android:thumbTint="#123abc"/>
 
 
+        <TextView
+            android:id="@+id/percentageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0%"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="zapisz" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trening_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:scrollbars="vertical"/>
 
 </LinearLayout>
