--- a/app/src/main/res/layout/item_training.xml
+++ b/app/src/main/res/layout/item_training.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:layout_marginBottom="15dp"
+    android:background="@drawable/border">
 
     <TextView
         android:id="@+id/timeTextView"
